# MCP-github-issue-resolver

./: .gitattributes  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  server.py  setup_wizard.py
.beads/: config.yaml  issues.jsonl
docs/PRD/: PRD-2026-001-github-issue-agent.md
docs/TRD/: TRD-2026-001-github-issue-agent.md
ghia/: app.py  atomic.py  config.py  convention_scan.py  detection.py  errors.py  github_client_light.py  naming.py  network.py  paths.py  polling.py  protocol.py  queue_processor.py  redaction.py  repo_detect.py  retry.py  session.py
ghia/integrations/: __init__.py  docker_runner.py  gh_cli.py  github.py
ghia/policy/: __init__.py  permission_policy.py
ghia/prompts/: __init__.py  agent_protocol.md
ghia/tools/: __init__.py  control.py  fs.py  git.py  issues.py  lint.py  pr.py  tests.py  undo.py  validation.py
ghia/ui/: __init__.py  opener.py  server.py  terminal.py
ghia/ui_static/: __init__.py  picker.html
prompts/: agent_protocol.md
tests/: conftest.py  test_app.py  test_atomic.py  test_config.py  test_control.py  test_convention_scan.py  test_detection.py  test_docker_runner.py  test_errors.py  test_fs_tools.py  test_gh_cli.py  test_git_tools.py  test_github_client.py  test_github_client_light.py  test_infra.py  test_issue_tools.py  test_lint_tool.py  test_naming.py  test_network.py  test_paths.py  test_permission_policy.py  test_polling.py  test_pr_creation.py  test_protocol.py  test_queue_processor.py  test_readme.py  test_redaction.py  test_repo_detection.py  test_retry.py  test_run_tests.py  test_server_config_missing.py  test_server_prompts.py  test_session.py  test_setup_wizard.py  test_terminal_picker.py  test_ui_opener.py  test_ui_server.py  test_undo_tool.py  test_validation.py
